--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
 
         <div class="video-outer">
             <div class="video">
-                <iframe width="" height="" src="https://www.youtube.com/embed/DnpUKcCRyH0?autoplay=1&si=xWnmqktExpZ-P0a_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="" height="" src="https://www.youtube.com/embed/DnpUKcCRyH0?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <button type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -1933,7 +1933,7 @@
                                 setTimeout(() => {
                                     $('.video-outer .video iframe').contents().find('.ytp-large-play-button').click();
                                     
-                                }, 4000);
+                                }, 3500);
 
 
                                 $('.video-outer .close').on('click', function () {
