--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,12 @@
                 display: none;
             }
 
+            @media only screen and (max-width:510px) {
+                .video-outer{
+                    left: 2%;
+                }
+            }
+
             .video-outer iframe {
                 position: absolute;
                 width: 100%;
@@ -1929,11 +1935,11 @@
                                 setTimeout(() => {
                                     $('.video-outer').css('display', 'block');
                                     
-                                }, 3000);
+                                }, 15000);
                                 setTimeout(() => {
                                     $('.video-outer .video iframe').contents().find('.ytp-large-play-button').click();
                                     
-                                }, 3500);
+                                }, 15500);
 
 
                                 $('.video-outer .close').on('click', function () {
