--- a/index.html
+++ b/index.html
@@ -1141,17 +1141,13 @@
 
             .video-outer {
                 position: fixed;
-                bottom: 10%;
-                left: 5%;
+                bottom: 15%;
+                left: 25%;
                 z-index: 99999;
                 display: none;
             }
 
-            @media only screen and (max-width:510px) {
-                .video-outer{
-                    left: 2%;
-                }
-            }
+            
 
             .video-outer iframe {
                 position: absolute;
@@ -1170,8 +1166,8 @@
                 font-style: normal;
                 font-family: Arial, Helvetica, sans-serif;
                 word-break: initial;
-                width: 400px;
-                height: 225px;
+                width: 800px;
+                height: 450px;
             }
 
             .video-outer .video button{
@@ -1188,6 +1184,17 @@
                 color: #fff;
                 font-weight: 400;
                 line-height: 0.1;
+            }
+            @media only screen and (max-width:510px) {
+                .video-outer{
+                    left: 2%;
+                    bottom: 35%;
+                }
+
+                .video-outer iframe {
+                    width: 400px;
+                    height: 225px;
+                }
             }
 
         </style>
